--- a/style.css
+++ b/style.css
@@ -70,8 +70,30 @@ section{
 }
 .client-area{
     text-align: center;
+    background-image: url(images/footer-bg.png);
+    background-repeat: no-repeat;
 }
 .client-area b{
     text-align: center;
-    margin-right:0 100px;
+    
+}
+.contact-area{
+    width: 50%;
+    margin: auto;
+}
+.contact-button{
+    text-decoration:none;
+    background-image: linear-gradient(45deg,hotpink,deeppink);
+    padding:15px 15px;
+    border-radius:10px;
+    color:white;
+    font-weight:500;
+    margin-top:5%;
+    display:block;
+}
+.footer-area{
+    text-align: center;
+    color: gray;
+    font-weight: lighter;
+    padding-bottom: 30px;
 }
