--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@ h2{
 p{
     color: dimgray;
 }
-.text-highlight{
-    color: orange;
-}
 .half-width{
     width: 40%;
     float: left;
@@ -25,7 +22,7 @@ p{
     width: 100%;
 }
 .header-area{
-    background-image: url("Images/header-bg.png");
+    background-image: url("images/header-bg.png");
     background-repeat: no-repeat;
 }
 section{
@@ -41,13 +38,13 @@ section{
     background-image: linear-gradient(deeppink,magenta);
 }
 .dream-area{
-    background-image: url("Images/biography-bg.png");
+    background-image: url("images/biography-bg.png");
     background-repeat: no-repeat;
 }
 
 .latest-work-area{
     padding-top: 100px;
-    background-image: url("Images/latest-work-bg.png");
+    background-image: url("images/latest-work-bg.png");
     background-repeat: no-repeat;
     background-position: center;
 }
